# ilo-toki-lili

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  __init__.py  config_hash.py
configs/ablations/: README.md
data/: README.md  VOCAB_SOURCE.md  __init__.py  contamination.py  linku_source_snapshot.json  schemas.py  tokenizer.py  vocab.json  vocab_builder.py  vocab_source_manifest.json
data/grammar/: README.md
data/review/: README.md
data/tiers/: README.md
data/world/: README.md
data/world/sprites/: README.md
docs/: PROJECT_PLAN.md  README.md
docs/decisions/: 2026-07-02-community-text-corpus-policy.md  2026-07-02-equal-tuning-budget.md  2026-07-02-reasoning-model-scope.md  2026-07-02-repository-structure.md  2026-07-02-webapp-resource-and-toki-sona-surface.md  2026-07-03-vocabulary-freeze.md  README.md
eval/: README.md  __init__.py
eval/items/: README.md
eval/items/e15/: README.md
experiments/: README.md
ilo_toki_lili/: __init__.py
infra/: README.md
models/: README.md  __init__.py
notebooks/: README.md
scripts/: README.md  __init__.py  build_vocab.py  check.py  check_contamination.py  fetch_linku_vocab_snapshot.py  scan_secrets.py
serve/: README.md
tests/: README.md  test_module_hygiene.py
tests/configs/: test_config_hash.py
tests/data/: test_contamination.py  test_schemas.py  test_tokenizer.py  test_vocab_builder.py
tests/scripts/: test_check_contamination.py
train/: README.md  __init__.py
train/rl/: README.md
web/: README.md
