[project]
name = "ilo-toki-lili"
version = "0.1.0"
description = "Small Toki Pona language-modeling experiments for grounded meaning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "numpy>=1.26",
    "pillow>=10.0",
    "torch>=2.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
