[project]
name = "ilo-toki-lili"
version = "0.1.0"
description = "Toki Pona language-modeling experiments for grounded meaning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2",
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "torch>=2.4",
    "tqdm>=4.66",
    "webdataset>=0.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]
serve = [
    "fastapi>=0.111",
    "slowapi>=0.1",
    "uvicorn[standard]>=0.30",
]
tracking = [
    "wandb>=0.17",
]
rl = [
    "minigrid>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
